--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,42 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+body {
+  width: 1440px;
+  padding: 24px 156px;
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.gallery {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: 24px;
+  height: 648px;
+  padding: 0;
+  margin: auto;
+}
+
+.gallery-item {
+  width: 360px;
+  height: 200px;
+  transition: transform 250ms linear;
+}
+.gallery-image {
+  height: 100%;
+  width: 100%;
+}
+
+.gallery-item:hover,
+.gallery-item:focus {
+  transform: scale(1.04);
+  cursor: pointer;
+}
